crates/relate-macros/tests/fail/derive_no_relate_attr.rs
//! Should fail: #[derive(Relate)] without #[relate(...)] attribute.

use relate::Relate;

struct Source {
    name: String,
}

#[derive(Relate)]
struct Target {
    name: String,
}

fn main() {}

